# xsmp-sdk

./: .clang-tidy  .classpath  .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  CONTRIBUTING.md  QUALITY_GUIDELINES.md  README.md  SECURITY.md  build.properties  formatter-cpp-eclipse.xml  pyproject.toml  xsmp.project
.github/workflows/: build.yml  codeql.yml  coverity.yml  sonarcloud.yml
cmake/: PathUtils.cmake  Pytest.cmake  PytestAddTests.cmake
docs/: README.md  REQUIREMENTS.md  _config.yml  faq.md  index.md  quickstart.md  requirements.md
docs/_data/: navigation.yml
docs/_layouts/: default.html
docs/assets/css/: style.scss
examples/: CMakeLists.txt
examples/project1/: .classpath  .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  README.md  build.properties  xsmp.project
examples/project1/python/xsmp_example_project1/: __init__.py  _test_Counter.py  _test_CounterManager.py  _test_xsmp_example_project1.py  test_Counter.py  test_CounterManager.py  test_xsmp_example_project1.py
examples/project1/python/xsmp_example_project1/Example/: __init__.py
examples/project1/smdl/: xsmp_example_project1.xsmpcat
examples/project1/smdl-gen/: xsmp_example_project1.smpcat  xsmp_example_project1.smppkg
examples/project1/src-gen/: xsmp_example_project1.cpp  xsmp_example_project1.h  xsmp_example_project1.pkg.cpp
examples/project1/src-gen/Example/: CounterGen.cpp  CounterGen.h  CounterManagerGen.cpp  CounterManagerGen.h  M1Gen.cpp  M1Gen.h
examples/project1/src/Example/: Counter.cpp  Counter.h  CounterManager.cpp  CounterManager.h  M1.cpp  M1.h
include/Xsmp/: Aggregate.h  AnySimpleConverter.h  Array.h  Collection.h  Component.h  ComponentHelper.h  Composite.h  Container.h  DateTime.h  Duration.h  EntryPoint.h  EntryPointPublisher.h  EventConsumer.h  EventProvider.h  EventSink.h  EventSource.h  Exception.h  Factory.h  FallibleModel.h  Field.h  Helper.h  LibraryHelper.h  Model.h  Object.h  Persist.h  Reference.h  Request.h  Service.h  String.h  cstring.h  version.h
include/Xsmp/Persist/: SmpIObject.h  StdArray.h  StdAtomic.h  StdMap.h  StdPair.h  StdSet.h  StdString.h  StdUnorderedMap.h  StdUnorderedSet.h  StdVector.h
python/: pytest.ini
python/tests/: _test_M1.py  _test_ModelWithProperties.py  test_M1.py  test_ModelWithProperties.py
python/xsmp/: __init__.py  unittest.py
python/xsmp_event_manager/: __init__.py
python/xsmp_event_manager/Xsmp/: __init__.py
python/xsmp_link_registry/: __init__.py
python/xsmp_link_registry/Xsmp/: __init__.py
python/xsmp_logger/: __init__.py
python/xsmp_logger/Xsmp/: __init__.py
python/xsmp_resolver/: __init__.py
python/xsmp_resolver/Xsmp/: __init__.py
python/xsmp_scheduler/: __init__.py
python/xsmp_scheduler/Xsmp/: __init__.py
python/xsmp_tests/: __init__.py
python/xsmp_tests/Xsmp/: __init__.py
python/xsmp_time_keeper/: __init__.py
python/xsmp_time_keeper/Xsmp/: __init__.py
smdl/Xsmp/Services/: xsmp_event_manager.xsmpcat  xsmp_link_registry.xsmpcat  xsmp_logger.xsmpcat  xsmp_resolver.xsmpcat  xsmp_scheduler.xsmpcat  xsmp_time_keeper.xsmpcat
smdl/Xsmp/Tests/: xsmp_tests.xsmpcat
src/: xsmp_services.cpp  xsmp_services.h  xsmp_services.pkg.cpp
src-gen/: xsmp_event_manager.cpp  xsmp_event_manager.h  xsmp_event_manager.pkg.cpp  xsmp_link_registry.cpp  xsmp_link_registry.h  xsmp_link_registry.pkg.cpp  xsmp_logger.cpp  xsmp_logger.h  xsmp_logger.pkg.cpp  xsmp_resolver.cpp  xsmp_resolver.h  xsmp_resolver.pkg.cpp  xsmp_scheduler.cpp  xsmp_scheduler.h  xsmp_scheduler.pkg.cpp  xsmp_tests.cpp  xsmp_tests.h  xsmp_tests.pkg.cpp  xsmp_time_keeper.cpp  xsmp_time_keeper.h  xsmp_time_keeper.pkg.cpp
src-gen/Xsmp/Services/: XsmpEventManagerGen.cpp  XsmpEventManagerGen.h  XsmpLinkRegistryGen.cpp  XsmpLinkRegistryGen.h  XsmpLoggerGen.cpp  XsmpLoggerGen.h  XsmpResolverGen.cpp  XsmpResolverGen.h  XsmpSchedulerGen.cpp  XsmpSchedulerGen.h  XsmpTimeKeeperGen.cpp  XsmpTimeKeeperGen.h
src-gen/Xsmp/Tests/: ModelWithArrayFieldsGen.cpp  ModelWithArrayFieldsGen.h  ModelWithEventsGen.cpp  ModelWithEventsGen.h  ModelWithOperationsGen.cpp  ModelWithOperationsGen.h  ModelWithPropertiesGen.cpp  ModelWithPropertiesGen.h  ModelWithSimpleArrayFieldsGen.cpp  ModelWithSimpleArrayFieldsGen.h  ModelWithSimpleFieldsGen.cpp  ModelWithSimpleFieldsGen.h
src/Smp/: AnySimple.cpp  DummySymbols.cpp  StreamOperators.cpp  Uuid.cpp  utility.h
src/Xsmp/: Aggregate.cpp  Component.cpp  Composite.cpp  Container.cpp  DateTime.cpp  Duration.cpp  EntryPoint.cpp  EntryPointPublisher.cpp  EventConsumer.cpp  EventProvider.cpp  EventSink.cpp  EventSource.cpp  Exception.cpp  Factory.cpp  FactoryCollection.cpp  FactoryCollection.h  FallibleModel.cpp  Field.cpp  Helper.cpp  LibraryHelper.cpp  Object.cpp  Reference.cpp  Request.cpp  Server.cpp  Simulator.cpp  Simulator.h  StorageReader.cpp  StorageReader.h  StorageWriter.cpp  StorageWriter.h  ThreadSafeData.h  cstring.cpp
src/Xsmp/Publication/: Field.cpp  Field.h  Operation.cpp  Operation.h  Property.cpp  Property.h  Publication.cpp  Publication.h  Request.cpp  Request.h  Type.cpp  Type.h  TypeRegistry.cpp  TypeRegistry.h
src/Xsmp/Services/: XsmpEventManager.cpp  XsmpEventManager.h  XsmpLinkRegistry.cpp  XsmpLinkRegistry.h  XsmpLogger.cpp  XsmpLogger.h  XsmpResolver.cpp  XsmpResolver.h  XsmpScheduler.cpp  XsmpScheduler.h  XsmpTimeKeeper.cpp  XsmpTimeKeeper.h
src/Xsmp/Tests/: ModelWithArrayFields.cpp  ModelWithArrayFields.h  ModelWithEvents.cpp  (+9 more)
src/python/: ecss_smp.cpp  ecss_smp.h
test/: xsmp.project
tests/: XsmpLogger.properties
tests/Smp/: AnySimpleTest.cpp  StreamOperatorsTest.cpp  UuidTest.cpp
tests/Xsmp/: ArrayFieldTest.cpp  ArrayTest.cpp  CollectionTest.cpp  ComponentTest.cpp  ContainerTest.cpp  DateTimeTest.cpp  DurationTest.cpp  EntryPointTest.cpp  EventsTest.cpp  ExceptionTest.cpp  FactoryTest.cpp  FallibleModelTest.cpp  HelperTest.cpp  ObjectTest.cpp  PersistTest.cpp  ReferenceTest.cpp  SimpleArrayFieldTest.cpp  SimpleFieldTest.cpp  SimulatorTest.cpp  Storage.cpp  Storage.h  StorageTest.cpp  StringTest.cpp  StructureFieldTest.cpp  TestHelper.h  cstringTest.cpp
(+280 files in other folders)
