[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "xsmp-sdk"
version = "1.0.0"
description = "Xsmp Simulator Development Kit."
readme = "README.md"
license = {text = "Apache-2.0"}
authors=[{name="Yannick DAVELUY", email="yannick.daveluy@thalesaleniaspace.com"}]
requires-python = ">=3.7"
classifiers=[
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Github = "https://github.com/ThalesGroup/xsmp-sdk"

[project.optional-dependencies]
test = ["pytest"]


[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = [
    "python/xsmp",
    "python/xsmp_event_manager",
    "python/xsmp_link_registry",
    "python/xsmp_logger",
    "python/xsmp_resolver",
    "python/xsmp_scheduler",
    "python/xsmp_time_keeper",
]

[tool.scikit-build.cmake.define]
XSMP_BUILD_PYTHON_BINDINGS = "ON"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
[tool.cibuildwheel]
test-extras = "test"
test-command = "python -m pytest {project}/python -v"
